fixing HLA refs

--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -1,7 +1,7 @@
 final<div class="container" id="patientID" *ngIf="patient">
   <div class="patient-container">
 
-    <app-patient-nav class="nav patient-nav" [ngClass]="patient.cohort" [cohort]="patient.cohort"></app-patient-nav>
+    <app-patient-nav class="nav patient-nav" [ngClass]="patient.cohort" [cohort]="patient.cohort" [expts]="exptTypes"></app-patient-nav>
 
     <div class="patient-content">
 
