--- a/sample-viewer/src/app/provenance/provenance.component.scss
+++ b/sample-viewer/src/app/provenance/provenance.component.scss
@@ -8,7 +8,7 @@
   font-size: 1em;
   padding: 0;
   line-height: 2em;
-  margin-left: 5px;
+  // margin-left: 5px;
   color: $ebola-md;
   background: lighten($ebola-lt, 12%);
 }
