--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -1,11 +1,12 @@
-final<div class="container" id="patientID" *ngIf="patient">
+<div class="container" id="patientID" *ngIf="patient">
   <div class="patient-container">
 
     <app-patient-nav class="nav patient-nav" [ngClass]="patient.cohort" [cohort]="patient.cohort" [expts]="exptTypes"></app-patient-nav>
 
     <div class="patient-content">
+      <app-patient-warning [expts]="expts"></app-patient-warning>
 
-      <!-- NAV: ID + cohort -->
+      <!-- HEADER: ID + cohort -->
       <div class="patient-header">
         <div class="page-header" [ngClass]="patient.cohort">
           <h1>Patient {{ patient.patientLabel }}</h1>
