--- a/sample-viewer/src/app/patient-page/patient-warning/patient-warning.component.html
+++ b/sample-viewer/src/app/patient-page/patient-warning/patient-warning.component.html
@@ -1,7 +1,7 @@
 <div class="warning-banner" *ngIf="embargoed || preliminary || privateData">
-  <span>{{ (embargoed || privateData) ?
+  <div class="warning-header">{{ (embargoed || privateData) ?
   (preliminary ? "Some data for this patient cannot be shared and/or may change:" : "Some data for this patient cannot be shared:" ) :
-  "Some data for this patient may change:" }}</span>
+  "Some data for this patient may change:" }}</div>
   <table>
     <tr *ngIf="embargoed">
       <td class="icon">
