change language for sequelae

--- a/sample-viewer/src/app/patient-page/patient-symptoms/patient-symptoms.component.html
+++ b/sample-viewer/src/app/patient-page/patient-symptoms/patient-symptoms.component.html
@@ -2,7 +2,7 @@
 
   <div class="symptom-timepoint" *ngFor="let timepoint of patient.symptoms">
     <h4 class="patient timepoint">
-      <i class="fas fa-lock private-icon" matTooltip="private data; do not share"></i>Symptoms at {{ timepoint.timepoint }}</h4>
+      <i class="fas fa-lock private-icon" matTooltip="private data; do not share"></i>Sequelae symptoms at {{ timepoint.timepoint }}</h4>
 
     <table class="symptom-list">
       <tr *ngFor="let symptom of symptom_keys">
