--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -69,7 +69,7 @@
             </mat-panel-title>
           </mat-expansion-panel-header>
 
-          <app-provenance [dateModified]="patient.dateModified" class="provenance" [embargoed]="true"></app-provenance>
+          <app-provenance [dateModified]="patient.dateModified" class="provenance" [embargoed]="true" source="Viral Hemorrhagic Fever Consortium / Kenema Government Hospital"></app-provenance>
           <app-patient-symptoms [patient]="patient"></app-patient-symptoms>
         </mat-expansion-panel>
       </ng-container>
