--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -676,7 +676,8 @@ th.mat-header-cell {
   padding: 5px;
   color: $grey-400;
   margin-right: 4px;
-  margin-bottom: 4px;
+  margin-bottom: 2px;
+  margin-top: 2px;
   border-radius: 4px;
 }
 
