--- a/sample-viewer/src/app/_dialogs/corrections/corrections.component.html
+++ b/sample-viewer/src/app/_dialogs/corrections/corrections.component.html
@@ -1,2 +1,2 @@
-<h3 class="update-header">Updates to {{data.label}} data</h3>
-{{ data }}
+<h3 class="update-header">Updates to {{data['label']}} data</h3>
+{{ data['correction'] }}
