--- a/sample-viewer/src/app/patient-page/patient-warning/patient-warning.component.html
+++ b/sample-viewer/src/app/patient-page/patient-warning/patient-warning.component.html
@@ -3,7 +3,7 @@
   (preliminary ? "Some data for this patient cannot be shared and/or may change:" : "Some data for this patient cannot be shared:" ) :
   "Some data for this patient may change:" }}</div>
   <table>
-    <tr *ngIf="embargoed">
+    <!-- <tr *ngIf="embargoed">
       <td class="icon">
         <i class="fas fa-stopwatch embargoed header-icon" matTooltip="embargoed data; do not share"></i>
       </td>
@@ -11,7 +11,7 @@
       <td>
         <span class="warning-label embargoed">Embargoed: </span>cannot be shared until 6 months after publication
       </td>
-    </tr>
+    </tr> -->
 
     <tr *ngIf="privateData">
       <td class="icon">
