--- a/sample-viewer/src/app/provenance/provenance-title/provenance-title.component.html
+++ b/sample-viewer/src/app/provenance/provenance-title/provenance-title.component.html
@@ -9,7 +9,7 @@
 
   <div class="container container-icons">
     <i class="fas fa-lock private-icon header-icon" matTooltip="private data; do not share" *ngIf="private"></i>
-    <i class="fas fa-stopwatch embargoed-icon header-icon" matTooltip="embargoed data; do not share" *ngIf="embargoed"></i>
+    <!-- <i class="fas fa-stopwatch embargoed-icon header-icon" matTooltip="embargoed data; do not share" *ngIf="embargoed"></i> -->
     <!-- <svg-icon [icon]="dataStatus" class="data-status-icon" [matTooltip]="dataStatus + ' data'" *ngIf="dataStatus"></svg-icon> -->
     <div class="data-status container" *ngIf="dataStatus === 'preliminary'">
       <div class="preliminary">preliminary data</div>
