--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -4,7 +4,7 @@
     <app-patient-nav class="nav patient-nav" [ngClass]="patient.cohort" [cohort]="patient.cohort" [expts]="exptTypes"></app-patient-nav>
 
     <div class="patient-content">
-      <app-patient-warning [expts]="expts"></app-patient-warning>
+      <app-patient-warning [expts]="expts" [patientStatus]="patient.dataStatus"></app-patient-warning>
 
       <!-- HEADER: ID + cohort -->
       <div class="patient-header">
@@ -32,12 +32,12 @@
       <mat-expansion-panel class="panel-group" id="demographics" [expanded]="demographicsPanelState" (opened)="demographicsPanelState = true" (closed)="demographicsPanelState = false">
         <mat-expansion-panel-header [collapsedHeight]="expansionPanelHeight" [expandedHeight]="expansionPanelHeight" class="panel-header">
           <mat-panel-title class="panel-title">
-            <app-provenance-title class="flex-grow1" title="Demographics" [embargoed]="true"></app-provenance-title>
+            <app-provenance-title class="flex-grow1" title="Demographics" [private]="privateData"></app-provenance-title>
           </mat-panel-title>
         </mat-expansion-panel-header>
 
         <div class="container patient-metadata">
-          <app-provenance [dateModified]="patient.dateModified" embargoLabel="Demographic" changes="initial data load" source="Viral Hemorrhagic Fever Consortium / Kenema Government Hospital" [embargoed]="true" class="provenance"></app-provenance>
+          <app-provenance [dateModified]="patient.dateModified" embargoLabel="Demographic" [changes]="patient.correction" [source]="patient.publisher" class="provenance"></app-provenance>
 
           <div class="container patient-demographics">
             <app-patient-demographics [patient]="patient"></app-patient-demographics>
@@ -86,11 +86,13 @@
         <mat-expansion-panel class="panel-group" id="ELISA" [expanded]="elisaPanelState" (opened)="elisaPanelState = true" (closed)="elisaPanelState = false">
           <mat-expansion-panel-header [collapsedHeight]="dataPanelHeight" [expandedHeight]="dataPanelHeight">
             <mat-panel-title class="panel-title">
-              <app-provenance-title class="flex-grow1" title="ELISA Data" icon="elisa" dataStatus="preliminary"></app-provenance-title>
+              <app-provenance-title class="flex-grow1" title="ELISA Data" icon="elisa" [dataStatus]="getELISA()['dataStatus']"></app-provenance-title>
+
             </mat-panel-title>
           </mat-expansion-panel-header>
 
-          <app-provenance [dateModified]="patient.dateModified" class="provenance" source="Viral Hemorrhagic Fever Consortium / Kenema Government Hospital" dataStatus="preliminary"></app-provenance>
+          <app-provenance [dateModified]="patient.dateModified" embargoLabel="ELISA" class="provenance" [source]="patient.publisher" [changes]="getELISA()['correction']" [citation]="getELISA()['citation']" [dataStatus]="getElisa()['dataStatus']">
+          </app-provenance>
           <app-patient-elisas [patient]="patient"></app-patient-elisas>
         </mat-expansion-panel>
 
