change header if logged in

--- a/sample-viewer/src/app/header/header.component.scss
+++ b/sample-viewer/src/app/header/header.component.scss
@@ -5,31 +5,42 @@
   padding: 12px $lr-padding;
 }
 
-.blue-gradient {
+.authorized.prod {
   background: linear-gradient(270deg, $cvisb-dark, $cvisb-bright);
 }
 
-.purple-gradient {
+.authorized.dev {
   // background: linear-gradient(270deg, $cvisb-dark, #8c77bb);
   background: linear-gradient(270deg,$dev-dark,$dev-theme);
 }
 
+.dev {
+  background: white;
+}
+
+.authorized-warning,
 .dev-warning {
   font-size: 12px;
   font-weight: 700;
   text-transform: uppercase;
-  color: accent(50);
+  color: $grey-250;
   letter-spacing: 4.3px;
 }
 
-.dev-banner {
+.authorized .dev-warning {
+  color: accent(100);
+}
+
+.authorized-warning {
+  letter-spacing: 7.8px;
+  color: accent(100);
+}
+
+.dev-warning-banner {
   justify-content: center;
   padding: 5px 10px;
   border-top: 2px solid white;
-  // background: $ebola-color;
-  // background: accent-redder(500);
   background: accent-redder(A400);
-  // background: accent-redder(A700);
   color: white;
   text-transform: none;
   letter-spacing: 1.25px;
@@ -73,7 +84,7 @@ img {
     }
 
     &:hover {
-      color: accent(50);
+      color: accent(100);
     }
   }
 }
@@ -83,17 +94,12 @@ img {
 }
 
 .menu-item > a {
-  color: #fff;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 700;
   text-transform: uppercase;
   text-decoration: none;
   padding-bottom: 8px;
   position: relative;
-
-  &:hover {
-    color: accent(50);
-  }
 
   &:before {
     content: "";
@@ -103,6 +109,7 @@ img {
     bottom: -2px;
     left: 0;
     background-color: accent(50);
+    background-color: $cvisb-theme;
     visibility: hidden;
     -webkit-transform: scaleX(0);
     transform: scaleX(0);
@@ -114,6 +121,26 @@ img {
     visibility: visible;
     -webkit-transform: scaleX(1);
     transform: scaleX(1);
+  }
+}
+
+.menu-item > a {
+  color: $grey-300;
+
+  &:hover {
+    color: $grey-400;
+  }
+}
+
+.authorized .menu-item > a {
+  color: white;
+
+  &:hover {
+    color: accent(100);
+  }
+
+  &:before {
+    background-color: accent(100);
   }
 }
 
@@ -129,6 +156,10 @@ li.menu-item {
 }
 
 .current-menu-item {
+  border-bottom: 2px $cvisb-theme solid;
+}
+
+.authorized .current-menu-item {
   border-bottom: 2px white solid;
 }
 
