--- a/sample-viewer/src/app/header/header.component.html
+++ b/sample-viewer/src/app/header/header.component.html
@@ -1,10 +1,14 @@
-<header class="container cvisb-header" [ngClass]="prodEnvironment ? 'blue-gradient' : 'purple-gradient'" *ngIf="prodEnvironment === true || prodEnvironment === false">
+<header class="container cvisb-header" [ngClass]="{'authorized': authorized, 'prod': prodEnvironment, 'dev': !prodEnvironment}" *ngIf="prodEnvironment === true || prodEnvironment === false">
   <div class="logo">
     <a routerLink="./home" alt="home link">
-      <img src="/assets/img/cvisb_icon_transparent_600px.png" alt="CViSB logo"/>
+      <img src="/assets/img/cvisb_icon_transparent_600px.png" alt="CViSB logo" *ngIf="authorized"/>
+      <img src="/assets/img/cvisb_icon_600px.png" alt="CViSB logo" *ngIf="!authorized"/>
     </a>
     <div class="dev-warning" *ngIf="!prodEnvironment">
       Development version
+    </div>
+    <div class="authorized-warning" *ngIf="authorized">
+      Authorized User
     </div>
   </div>
 
@@ -43,6 +47,6 @@
 
 </header>
 
-<div class="container dev-banner dev-warning" *ngIf="prodEnvironment === false">
+<div class="container dev-warning-banner dev-warning" *ngIf="prodEnvironment === false">
   Data on the development site are not actively maintained. View the most recent data at <a href="https://data.cvisb.org/home">data.cvisb.org</a>
 </div>
