flatMap citations; add dataset names

--- a/sample-viewer/src/app/admin/citation/citation.component.html
+++ b/sample-viewer/src/app/admin/citation/citation.component.html
@@ -2,7 +2,7 @@
   <h3>Citing the CViSB Data Portal</h3>
 
   <section id="cvisb-data">
-    <p>
+    <p class="helper-text no-margin">
       To reference data from the Center for Viral Systems Biology Data Portal, please cite the Center for Viral Systems Biology:
     </p>
 
@@ -13,7 +13,7 @@
 
   <section id="individual-sources">
     <h3>Citing individual data sources</h3>
-    <p>
+    <p class="helper-text">
       The data in the CViSB Data Portal is a mixture of data collected by our consortium, data contributed by our partners, and publicly available data on Lassa Fever and Ebola. Some of the data has been published and others are works in
       progress. Individual data sources can be cited as:
     </p>
