--- a/sample-viewer/src/app/patient/patient-table/patient-table.component.html
+++ b/sample-viewer/src/app/patient/patient-table/patient-table.component.html
@@ -105,7 +105,7 @@
     <ng-container matColumnDef="availableData">
       <th mat-header-cell *matHeaderCellDef>available data</th>
       <td mat-cell *matCellDef="let element">
-        <div class="expt-type expt-type-hover" *ngFor="let expt of element.availableData" [matTooltip]="expt" matTooltipPosition="above" [ngClass]="(expt | experimentObject)['dataset_id']">
+        <div class="expt-type expt-type-hover" *ngFor="let expt of element.availableData" [matTooltip]="(expt | experimentObject)['dataset_name']" matTooltipPosition="above" [ngClass]="(expt | experimentObject)['dataset_id']">
           <a [routerLink]="['/patient', element.patientID]" [fragment]="(expt | experimentObject)['anchor_link'] | stripWhitespace">
             <svg-icon [icon]="(expt | experimentObject)['dataset_id']" [ngClass]="(expt | experimentObject)['dataset_id'] + '-icon'"></svg-icon>
           </a>
