--- a/sample-viewer/src/app/patient/patient-table/patient-table.component.html
+++ b/sample-viewer/src/app/patient/patient-table/patient-table.component.html
@@ -1,7 +1,7 @@
 <div class="patient-lists">
-  <div class="spinner-container container" *ngIf="patientSource.loadingState$ | async">
+  <!-- <div class="spinner-container container" *ngIf="patientSource.loadingState$ | async">
     <mat-spinner></mat-spinner>
-  </div>
+  </div> -->
 
   <table mat-table [dataSource]="patientSource" matSort id="patients" *ngIf="patientSource">
 
