--- a/sample-viewer/src/app/format-citation/format-citation.component.html
+++ b/sample-viewer/src/app/format-citation/format-citation.component.html
@@ -3,21 +3,22 @@
     <div class="citation" [ngSwitch]="verbosity">
       <!-- SHORTEST -->
       <ng-container *ngSwitchCase="'basic'">
-        <span id="authors">
-          <a [href]="citation.url" target="_blank" rel="noreferrer">
-            {{citation.author[0].givenName}} {{citation.author[0].familyName}}
-            <i>et al.</i>
-          </a>
-        </span>
+        <div class="citation-article">
+          <span id="authors">
+            <a [href]="citation.url" target="_blank" rel="noreferrer">
+              {{citation.author[0].givenName}} {{citation.author[0].familyName}}
+              <i>et al.</i>
+            </a>
+          </span>
 
-        <span id="journal" *ngIf="citation.journalNameAbbrev"><i>{{citation.journalNameAbbrev}}</i></span>
+          <span id="journal" *ngIf="citation.journalNameAbbrev"><i>{{citation.journalNameAbbrev}}</i></span>
 
-        <span id="date" *ngIf="citation.datePublished">{{ citation.datePublished | date: "yyyy" }}</span>
-
+          <span id="date" *ngIf="citation.datePublished">{{ citation.datePublished | date: "yyyy" }}</span>
+        </div>
       </ng-container>
 
       <!-- VERBOSE -->
-      <ng-container *ngSwitchCase="'verbose'">
+      <div *ngSwitchCase="'verbose'" class="citation-article">
         <span id="title" *ngIf="citation.name">
           <a [href]="citation.url" target="_blank" rel="noreferrer">
             <span [outerHTML]="citation.name"></span>
@@ -35,38 +36,40 @@
         <span id="issue" *ngIf="citation.issueNumber">, {{citation.issueNumber}}</span>
         <span id="page" *ngIf="citation.pagination">, {{citation.pagination}}</span>.
         <ng-container [ngTemplateOutlet]="links" [ngTemplateOutletContext]="{ citation: citation}"></ng-container>
-      </ng-container>
+</ng-container>
 
-      <!-- WITH LINKS -->
-      <ng-container *ngSwitchCase="'links'">
-        <ng-container [ngTemplateOutlet]="basic_citation" [ngTemplateOutletContext]="{ citation: citation}"></ng-container>
-        <ng-container [ngTemplateOutlet]="links" [ngTemplateOutletContext]="{ citation: citation}"></ng-container>
-      </ng-container>
+<!-- WITH LINKS -->
+<ng-container *ngSwitchCase="'links'">
+  <ng-container [ngTemplateOutlet]="basic_citation" [ngTemplateOutletContext]="{ citation: citation}"></ng-container>
+  <ng-container [ngTemplateOutlet]="links" [ngTemplateOutletContext]="{ citation: citation}"></ng-container>
+  </div>
 
-      <!-- DEFAULT -->
-      <ng-container *ngSwitchDefault>
-        <ng-container [ngTemplateOutlet]="basic_citation" [ngTemplateOutletContext]="{ citation: citation}"></ng-container>
-      </ng-container>
+  <!-- DEFAULT -->
+  <ng-container *ngSwitchDefault>
+    <ng-container [ngTemplateOutlet]="basic_citation" [ngTemplateOutletContext]="{ citation: citation}"></ng-container>
+  </ng-container>
 
-    </div>
+  </div>
 
   </div>
 
   <ng-template #basic_citation let-citation="citation">
-    <span id="authors">
-      <a [href]="citation.url" target="_blank" rel="noreferrer">
-        {{citation.author[0].givenName}} {{citation.author[0].familyName}}
-        <i>et al.</i>
-      </a>
-    </span>
-    <span id="journal" *ngIf="citation.journalName"><i>{{citation.journalName}}</i></span>
+    <div class="citation-article">
+      <span id="authors">
+        <a [href]="citation.url" target="_blank" rel="noreferrer">
+          {{citation.author[0].givenName}} {{citation.author[0].familyName}}
+          <i>et al.</i>
+        </a>
+      </span>
+      <span id="journal" *ngIf="citation.journalName"><i>{{citation.journalName}}</i></span>
 
-    <span id="date" *ngIf="citation.datePublished">{{ citation.datePublished | date: "yyyy" }}</span><span id="vol" *ngIf="citation.volumeNumber">, {{citation.volumeNumber}}</span><span id="issue" *ngIf="citation.issueNumber">, {{citation.issueNumber}}</span><span id="page" *ngIf="citation.pagination">, {{citation.pagination}}</span>.
-
+      <span id="date" *ngIf="citation.datePublished">{{ citation.datePublished | date: "yyyy" }}</span><span id="vol" *ngIf="citation.volumeNumber">, {{citation.volumeNumber}}</span><span id="issue" *ngIf="citation.issueNumber">,
+        {{citation.issueNumber}}</span><span id="page" *ngIf="citation.pagination">, {{citation.pagination}}</span>.
+    </div>
   </ng-template>
 
   <ng-template #links let-citation="citation">
-    <div class="links container">
+    <div class="citation-links container">
       <span id="pmid" *ngIf="citation.pmid">PubMed ID: <a [href]="'https://www.ncbi.nlm.nih.gov/pubmed/?term=' + citation.pmid" target="_blank" rel="noreferrer">{{citation.pmid}}</a></span>
 
       <span class="data-separator" *ngIf="citation.pmid && citation.doi"></span>
