--- a/sample-viewer/src/app/format-citation/format-citation.component.html
+++ b/sample-viewer/src/app/format-citation/format-citation.component.html
@@ -18,38 +18,40 @@
       </ng-container>
 
       <!-- VERBOSE -->
-      <div *ngSwitchCase="'verbose'" class="citation-article">
-        <span id="title" *ngIf="citation.name">
-          <a [href]="citation.url" target="_blank" rel="noreferrer">
-            <span [outerHTML]="citation.name"></span>
-          </a>.
-        </span>
-
-        <span id="authors">
-          <span *ngFor="let author of citation.author; let i=index" class="author">
-            {{author.givenName}} {{author.familyName}}<span>{{i === citation.author.length - 1 ? '. ' : ','}}</span>
+      <ng-container *ngSwitchCase="'verbose'">
+        <div class="citation-article">
+          <span id="title" *ngIf="citation.name">
+            <a [href]="citation.url" target="_blank" rel="noreferrer">
+              <span [outerHTML]="citation.name"></span>
+            </a>.
           </span>
-        </span>
-        <span id="journal" *ngIf="citation.journalName"><i>{{citation.journalName}}</i></span>
-        <span id="date" *ngIf="citation.datePublished">{{ citation.datePublished | date: "yyyy" }}</span>
-        <span id="vol" *ngIf="citation.volumeNumber">, {{citation.volumeNumber}}</span>
-        <span id="issue" *ngIf="citation.issueNumber">, {{citation.issueNumber}}</span>
-        <span id="page" *ngIf="citation.pagination">, {{citation.pagination}}</span>.
+
+          <span id="authors">
+            <span *ngFor="let author of citation.author; let i=index" class="author">
+              {{author.givenName}} {{author.familyName}}<span>{{i === citation.author.length - 1 ? '. ' : ','}}</span>
+            </span>
+          </span>
+          <span id="journal" *ngIf="citation.journalName"><i>{{citation.journalName}}</i></span>
+          <span id="date" *ngIf="citation.datePublished">{{ citation.datePublished | date: "yyyy" }}</span>
+          <span id="vol" *ngIf="citation.volumeNumber">, {{citation.volumeNumber}}</span>
+          <span id="issue" *ngIf="citation.issueNumber">, {{citation.issueNumber}}</span>
+          <span id="page" *ngIf="citation.pagination">, {{citation.pagination}}</span>.
+        </div>
         <ng-container [ngTemplateOutlet]="links" [ngTemplateOutletContext]="{ citation: citation}"></ng-container>
-</ng-container>
+      </ng-container>
 
-<!-- WITH LINKS -->
-<ng-container *ngSwitchCase="'links'">
-  <ng-container [ngTemplateOutlet]="basic_citation" [ngTemplateOutletContext]="{ citation: citation}"></ng-container>
-  <ng-container [ngTemplateOutlet]="links" [ngTemplateOutletContext]="{ citation: citation}"></ng-container>
-  </div>
+      <!-- WITH LINKS -->
+      <ng-container *ngSwitchCase="'links'">
+        <ng-container [ngTemplateOutlet]="basic_citation" [ngTemplateOutletContext]="{ citation: citation}"></ng-container>
+        <ng-container [ngTemplateOutlet]="links" [ngTemplateOutletContext]="{ citation: citation}"></ng-container>
+      </ng-container>
 
-  <!-- DEFAULT -->
-  <ng-container *ngSwitchDefault>
-    <ng-container [ngTemplateOutlet]="basic_citation" [ngTemplateOutletContext]="{ citation: citation}"></ng-container>
-  </ng-container>
+      <!-- DEFAULT -->
+      <ng-container *ngSwitchDefault>
+        <ng-container [ngTemplateOutlet]="basic_citation" [ngTemplateOutletContext]="{ citation: citation}"></ng-container>
+      </ng-container>
 
-  </div>
+    </div>
 
   </div>
 
