--- a/sample-viewer/src/app/admin/citation/citation.component.html
+++ b/sample-viewer/src/app/admin/citation/citation.component.html
@@ -1,3 +1,7 @@
+<div class="spinner-container container" *ngIf="loading">
+  <mat-spinner></mat-spinner>
+</div>
+
 <div class="about-text centered">
   <h3>Citing the CViSB Data Portal</h3>
 
